# Echomap

./: .gitignore  Cargo.toml  README.md
benches/: acoustics.rs  baselines.md  physics.rs  render.rs
demos/: boxing_match_demo.txt  connect_boxing_agents.py  connect_real_arm.py  run_boxing_demo.py
docs/: AGENTS.md  MANUAL_SMOKE.md  PLUGINS.md  SMOKE.md  TELEOP_README.md
examples/: teleop_e2e_demo.rs
python/: setup.py
python/echomap_client/: __init__.py  agents.py  cli.py  commentary.py  env.py  llm_agent.py  ollama_agent.py  plugins.py  runner.py
python/examples/echomap_plugin_example/: pyproject.toml
python/examples/echomap_plugin_example/src/echomap_plugin_example/: __init__.py
python/examples/echomap_plugin_example/src/echomap_plugin_example.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python/tests/: test_agent_bind.py  test_agent_platform_e2e.py  test_agents.py  test_bridge_parity.py  test_client.py  test_commentary.py  test_hardware.py  test_plugins.py  test_runner.py
scripts/: check-hot-path-unwraps.sh  check_perf_regression.sh  demo_teleop_e2e.sh  run_python_tests.sh  scan_leftovers.sh  smoke_all.sh  smoke_headless_e2e.sh  test_python_vs_live.sh
src/: UX.md  lib.rs  main.rs
src/acoustics/: bvh.rs  mod.rs  ray.rs  simulation.rs
src/agent/: backpressure.rs  bridge.rs  demo.rs  mod.rs  protocol.rs  session.rs  tcp_server.rs  ws_server.rs
src/benchmarks/: analytical.rs  mod.rs  suite.rs
src/fluids/: boundary.rs  grid.rs  mod.rs  solver.rs
src/gas/: boundary.rs  grid.rs  mod.rs  solver.rs
src/io/: device_caps.rs  export.rs  mod.rs  step_parser.rs
src/renderer/: bounds.rs  legend.rs  listener_viz.rs  mod.rs  perf_governor.rs  ray_debug.rs  surface_heatmap.rs
src/robot/: actuators.rs  body.rs  boxing.rs  collision.rs  definition.rs  dynamics.rs  kinematics.rs  mod.rs  sensors.rs  state.rs
src/scenarios/: builders.rs  cross_system.rs  fluid_validation.rs  gas_validation.rs  mod.rs  surface_validation.rs  underwater_acoustics.rs
src/scene/: history.rs  material.rs  mesh.rs  mod.rs  primitives.rs  voxel.rs
src/surface/: friction.rs  mod.rs  permeability.rs  scattering.rs  wetting.rs
src/teleop/: mod.rs  playback.rs  recorder.rs
src/ui/: command_palette.rs  config_validation.rs  defaults.rs  expr.rs  gestures.rs  gizmo.rs  keymap.rs  mod.rs  onboarding.rs  outliner.rs  pie_menu.rs  quad_view.rs  scene_io.rs  selection_set.rs  snap.rs  status_hints.rs
tasks/002-physics-quality-and-perf/: perf_report.md
tasks/004-whole-app-quality-gate/: issues_report.md
tasks/005-echomap-perf-core/: perf_report.md
tasks/006-echomap-sound-graphics/: visual_review.md
tasks/007-echomap-ui-polish/: walkthrough.md
test_files/: box_room.step  l_room.step  studio.step
tests/: adversarial_inputs.rs  benchmark_validation.rs  integrated_perf.rs  integration.rs  physics_realworld_validation.rs  physics_stability.rs  renderer_drawlist.rs  renderer_screenshots.rs  renderer_smoke.rs  robot_physics.rs  teleop_e2e.rs
(+20 files in other folders)
