[package]
name = "echomap"
version = "0.1.0"
edition = "2021"
description = "Desktop acoustic visualization tool — load STEP models, simulate sound propagation, visualize results"

[dependencies]
# GUI + windowing
eframe = "0.31"
egui = "0.31"
egui_extras = "0.31"

# 3D rendering
wgpu = "24"
glam = { version = "0.29", features = ["mint", "serde"] }
bytemuck = { version = "1", features = ["derive"] }

# Math / linear algebra
nalgebra = "0.33"

# Parallelism
rayon = "1.10"

# Audio playback
cpal = "0.15"

# File dialogs
rfd = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (material configs, project files)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + WebSocket (agent control interface)
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "macros", "io-util", "time"] }
tokio-tungstenite = "0.26"
tokio-util = "0.7"
futures-util = "0.3"

# Signal handling (headless server)
ctrlc = "3"

[profile.release]
opt-level = 3
lto = "thin"
