[package]
name = "echomap"
version = "0.1.0"
edition = "2021"
description = "Desktop acoustic visualization tool — load STEP models, simulate sound propagation, visualize results"
license = "MIT"
authors = ["Jack"]

[dependencies]
# GUI + windowing — egui + eframe drive the entire desktop app.
eframe = "0.31"
egui = "0.31"

# 3D math — glam is used pervasively (Vec3/Mat4/etc).
glam = { version = "0.29", features = ["mint", "serde"] }

# Parallelism — rayon backs the multi-robot physics step + ray-cast.
rayon = "1.10"

# File dialogs — STEP load, CSV export.
rfd = "0.15"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization (material configs, project files)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime + WebSocket (agent control interface)
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread", "macros", "io-util", "time"] }
tokio-tungstenite = "0.26"
tokio-util = "0.7"
futures-util = "0.3"

# Signal handling (headless server)
ctrlc = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
image = { version = "0.25", default-features = false, features = ["png"] }

[[bench]]
name = "physics"
harness = false

[[bench]]
name = "acoustics"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
